(library
 (name sesame)
 (public_name sesame)
 (libraries
  lwt
  lwt.unix
  yaml
  cohttp
  cohttp-lwt-unix
  uri
  fmt
  fpath
  tyxml
  omd
  jekyll-format
  digestif
  camlimages.png
  camlimages.jpeg)
 (preprocess
  (pps tyxml-ppx ppx_deriving_yaml ppx_deriving_yojson)))

(documentation
 (package sesame))
